--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -44,6 +44,11 @@ table {
   border-spacing: 0;
 }
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
 
 $i1d: 38,38,38;
 $edc: 199,199,199;
@@ -54,7 +59,6 @@ $b3f: 250,250,250;
 $bb2: 239,239,239;
 $f23: 255,255,255;
 $b38: 219,219,219;
-$b6a: 219,219,219;
 $ca6: 219,219,219;
 $cdd: 38,38,38;
 $e22: 199,199,199;
