--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -49,4 +49,10 @@ body {
   line-height: 1;
 }
 
+@media only screen and (max-width: 980px) {
+  body {
+    padding-top: 60px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
